--- a/validitech/index.html
+++ b/validitech/index.html
@@ -97,7 +97,7 @@
                 }
                 if (doc.data().role === "validator") {
                     const validatorNav = `
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/submit.html')">Validasi Media</span>
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./p/tabelMedia.html')">Validasi Media</span>
                     <span type="button" class="link-light ms-5" onclick="location.replace('./p/profil.html')">Profil</span>
                     `
                     navbar.innerHTML = validatorNav + logoutNav
