--- a/validitech/p/register.html
+++ b/validitech/p/register.html
@@ -40,21 +40,29 @@
             <h1 class="text-center mb-5">Registrasi</h1>
 
             <!-- Nama Lengkap Pengguna -->
+            <label>Nama Lengkap</label>
             <div class="d-flex mb-3">
                 <input id="namaDepan" class="form-control me-1" type="text" placeholder="Nama Depan" required>
                 <input id="namaBelakang" class="form-control ms-1" type="text" placeholder="Nama Belakang" required>
             </div>
 
             <!-- Username Pengguna -->
+            <label>Username</label>
             <div class="input-group mb-3">
                 <span class="input-group-text">@</span>
                 <input id="username" class="form-control" type="text" placeholder="Username" required>
             </div>
 
             <!-- Email Pengguna -->
+            <label>Email</label>
             <input id="email" class="form-control mb-3" type="text" placeholder="Email" required>
 
+            <!-- No. Telepon -->
+            <label>No. Telepon</label>
+            <input id="tel" class="form-control mb-3" type="tel" placeholder="No. Telepon/Whatsapp" required>
+
             <!-- Password Pengguna -->
+            <label>Password</label>
             <div class="input-group mb-3">
                 <input class="form-control" type="password" id="password" placeholder="Password" required>
                 <button class="btn btn-outline-light" type="button" id="togglePassword">
@@ -63,6 +71,7 @@
             </div>
 
             <!-- Konfirmasi Password Pengguna -->
+            <label>Konfirmasi Password</label>
             <div class="input-group mb-3">
                 <input class="form-control" type="password" id="konfirmasiPassword" placeholder="Konfirmasi Password"
                     required>
@@ -137,6 +146,7 @@
         const namaBelakang = document.getElementById("namaBelakang").value
         const username = document.getElementById("username").value
         const email = document.getElementById("email").value
+        const tel = document.getElementById("tel").value
         const password = document.getElementById("password").value
         const konfirmasiPassword = document.getElementById("konfirmasiPassword").value
         const role = document.getElementById("role").value
@@ -165,6 +175,7 @@
                             username: username,
                             role: role,
                             email: email,
+                            tel: tel,
                             profilePicture: downloadURL
                         })
                         return userCredential.user.updateProfile({
