--- a/validitech/p/submit.html
+++ b/validitech/p/submit.html
@@ -123,7 +123,8 @@
         }
     })
 
-    const databaseRef = firebase.firestore().collection("posts").doc(localStorage.getItem("uid"))
+    let uid = localStorage.getItem("uid")
+    const databaseRef = firebase.firestore().collection("posts").doc(uid)
     document.getElementById("submisi").addEventListener("click", function () {
         loadSubmit.style.display = "flex !important"
         if (type.value === "link") {
@@ -136,8 +137,8 @@
                     desc: desc.value,
                     category: category.value,
                     type: type.value,
-                    media: linkMedia.value
-                    
+                    media: linkMedia.value,
+                    uid: uid
                 }
                 let arrayLinkPost = []
                 if (doc.exists) {
@@ -187,7 +188,8 @@
                             desc: desc.value,
                             category: category.value,
                             type: type.value,
-                            media: downloadURL
+                            media: downloadURL,
+                            uid: uid
                         }
                         let arrayFilePost = []
                         if (doc.exists) {
