--- a/validitech/p/tabelMedia.html
+++ b/validitech/p/tabelMedia.html
@@ -52,6 +52,7 @@
                             <th>Judul</th>
                             <th>Kreator</th>
                             <th>Kategori</th>
+                            <th>tipe</th>
                             <th>Aksi</th>
                         </tr>
                     </thead>
@@ -95,6 +96,7 @@
                                 <td>${posts[i].title}</td>
                                 <td>@${posts[i].name}</td>
                                 <td>${posts[i].category}</td>
+                                <td>${posts[i].type}</td>
                                 <td>
                                     <a target="_blank" href="./post.html?uid=${posts[i].uid}&id=${posts[i].id}"><button type="button" class="btn btn-primary">Lihat</button></a>    
                                 </td>
