--- a/validitech/p/submit.html
+++ b/validitech/p/submit.html
@@ -67,6 +67,10 @@
             <input id="linkMedia" class="form-control mb-3" type="url" placeholder="Masukkan Link" disabled required>
             <label for="#fileMedia">Upload Media</label>
             <input id="fileMedia" class="form-control mb-3" type="file" placeholder="Upload Media" disabled required>
+
+            <label for="#linkMedia">Masukan Link Validasi</label>
+            <input id="linkMedia" class="form-control mb-3" type="url" placeholder="Masukan Link Google Form, dll" required>
+
             <div class="d-flex mt-5" style="display: none !important;" id="loadSubmit">
                 <div class="spinner-grow me-3" id="uploadBar" role="status"></div>
                 <label for="#fotoProfil">Submit</label>
@@ -120,6 +124,28 @@
             pemilik.value = user.displayName
             email.value = user.email
             localStorage.setItem("uid", user.uid)
+
+            const logoutNav = `<span class="link-danger ms-5" onclick="logout()">Log Out</span>`
+
+            const databaseRef = firebase.firestore().collection("users").doc(user.uid)
+            databaseRef.get().then((doc) => {
+                if (doc.data().role === "kreator") {
+                    const kreatorNav = `
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./tabelValidator.html')">List Validator</span>
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./submit.html')">Submit Media</span>
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./profil.html')">Profil</span>
+                    `
+                    navbar.innerHTML = kreatorNav + logoutNav
+                }
+                if (doc.data().role === "validator") {
+                    const validatorNav = `
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./tabelMedia.html')">Validasi Media</span>
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./profil.html')">Profil</span>
+                    `
+                    navbar.innerHTML = validatorNav + logoutNav
+                }
+            })
+            navbar.innerHTML = logoutNav
         }
     })
 
