--- a/validitech/p/tabelValidator.html
+++ b/validitech/p/tabelValidator.html
@@ -44,9 +44,8 @@
         <form class="bg-body-tertiary p-5">
             <h1 class="text-center mb-5">Validator</h1>
 
-            <div class="w-100 text-center">
-                <h3 id="konten"></h3>
-                <table class="table">
+            <div class="w-100 table-responsive text-center">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -92,11 +91,11 @@
                         const template = document.createElement("template")
                         template.innerHTML =
                             `<tr>
-                                <td><div class="foto" style="background-image: url(${validator[i].profilePicture}); width: 50px; height: 50px;"></div></td>
+                                <td><div class="foto avatar" style="background-image: url(${validator[i].profilePicture});"></div></td>
                                 <td>${validator[i].firstName} ${validator[i].lastName}</td>
                                 <td>${validator[i].username}</td>
                                 <td><a href="mailto:${validator[i].email}" class="text-body">${validator[i].email}</a></td>
-                                <td>${validator[i].tel}</td>
+                                <td><a href="tel:${validator[i].email}" class="text-body">${validator[i].tel}</a></td>
                                 </tr>`
                                 .trim()
                         return template.content.firstChild
