--- a/validitech/p/tabelValidator.html
+++ b/validitech/p/tabelValidator.html
@@ -77,12 +77,30 @@
 
         const tbody = document.querySelector("#tbody")
         if (user) {
-            const logoutNav = `
+            const usersRef = firebase.firestore().collection("users").doc(user.uid)
+            usersRef.get().then((doc) => {
+                const logoutNav = `
             <span type="button" class="link-light ms-5" onclick="location.replace('./profil.html')">Profil</span>
             <span type="button" class="link-danger ms-5" onclick="logout()">Log Out</span>
             `
 
-            navbar.innerHTML = logoutNav
+                navbar.innerHTML = logoutNav
+                if (doc.data().role === "validator") {
+                    const validatorNav = `
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./tabelMedia.html')">Validasi Media</span>
+                    `
+
+                    navbar.innerHTML = validatorNav + logoutNav
+                }
+                if (doc.data().role === "kreator") {
+                    const kreatorNav = `
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./tabelValidator.html')">List Validator</span>
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./submit.html')">Submit Media</span>
+                    `
+
+                    navbar.innerHTML = kreatorNav + logoutNav
+                }
+            })
             const databaseRef = firebase.firestore().collection("users").where("role", "==", "validator")
             databaseRef.get().then((querySnapshot) => {
                 querySnapshot.forEach((doc) => {
@@ -109,4 +127,15 @@
         }
 
     })
+
+    function logout() {
+        firebase.auth().signOut()
+            .then(() => {
+                alert("Logout berhasil!")
+                location.replace("./login.html")
+            })
+            .catch((error) => {
+                alert(error.message)
+            })
+    }
 </script>
